--- a/index.css
+++ b/index.css
@@ -167,7 +167,29 @@ a {
     font-size:12px;
     color:#a5a5a5;
 }
-.all{
-    height: 38px;
-    border:1px solid #00a4ff;
+.all {
+	display: block;
+	height: 38px;
+	border: 1px solid #00a4ff;
+	margin-top: 10px;
+	font-size: 16px;
+	color:  #00a4ff;
+	text-align: center;
+	line-height: 38px;
+}
+.all:hover {
+	background-color: #00a4ff;
+	color: #fff;
+}
+.goods{
+    height: 60px;
+    background-color: #fff;
+    margin-top: 10px;
+    line-height: 60px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, .2);
+}
+.goods h3{
+    margin-left: 30px;
+    font-size: 16px;
+    color:#00a4ff;
 }
